--- a/style.css
+++ b/style.css
@@ -1,34 +1,71 @@
+body{
+    background-color: #85FFBD;
+    background-image: linear-gradient(45deg, #85FFBD 0%, #FFFB7D 100%);
+    height: 100vh;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 .calculator{
     display: flex;
     flex-direction: column;
     margin: 100px auto;
-    width: 300px;
+    width: 334px;
     border: 1px solid black;
     border-radius: 8px;
+    background-color: #252422;
 }
 
 .display{
     border: 1px solid black;
-    width: 270px;
+    width: 304px;
     height: 60px;
     margin: 20px auto;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    flex-direction: column;
+    background-color: #fafafa;
+    border-radius: 4px;
+    user-select: none
+}
+
+.downNumber{
+    font-size: 30px;
+    height: 35px;
+    margin: 0 8px;
+    letter-spacing: 2px;
+}
+.upNumber{
+    font-size: 20px;
+    height: 25;
+    margin: 0 8px;
+    letter-spacing: 1px;
 }
 
 .buttons{
     display: flex;
     margin: 15px;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 8px;
+    
 }
 
 .buttons button{
-    width: 60px;
+    width: 70px;
     height: 40px;
     border: 1px solid black;
     text-align: center;
     align-content: center;
+    background-color: #ccc5b9;
+    border-radius: 4px;
+    font-size: 20px;
+    user-select: none
+}
+
+.buttons button:hover{
+    background-color: #e5dbcb;
 }
 
 #igual{
-    width: 130px;
+    width: 148px;
 }
